--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,13 +1,16 @@
 blinker==1.9.0
 click==8.2.0
 colorama==0.4.6
+dnspython==2.7.0
 dotenv==0.9.9
+email_validator==2.2.0
 Flask==3.1.1
 flask-cors==5.0.1
 Flask-DotEnv==0.1.2
 Flask-Mail==0.10.0
 Flask-WTF==1.2.2
 gunicorn==23.0.0
+idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.2
